# teh-o

./: .gitignore  Cargo.toml  LICENSE  README.md  U235_mt018_294K.yml  bacon.toml  u235_mt18_fission_294K.toml
.github/workflows/: teh-o-test.yml
lit_review/: .gitignore  1_surface_vs_delta_tracking_pros_and_cons.typ  main.bib  main.typ  sigma-total-and-deciding-rxns.odg  surface-tracking.odg  virtual-collisions.odg
src/: mock_test_cases.rs  nuc_data.rs
src/hdf5_to_yaml/: mod.rs
src/lib/: lib.rs
src/lib/simulation/: mod.rs
src/lib/simulation/monte_carlo/: mod.rs
src/lib/simulation/monte_carlo/mock_test_cases/: mod.rs
src/lib/simulation/monte_carlo/mock_test_cases/spherical_u235/: monoenergetic.rs
src/lib/simulation/monte_carlo/openmc/: mod.rs  open_mc_simulation_environment.rs
src/lib/simulation/monte_carlo/openmc/math_functions/: math_function_tests.rs  mod.rs
src/lib/simulation/monte_carlo/openmc/open_mc_simulation_environment/: assembly_settings_example.xml  mod.rs  openmc_data.rs  openmc_settings.rs
src/lib/simulation/monte_carlo/openmc/openmc_hdf5_interface/: mod.rs
src/lib/simulation/monte_carlo/openmc/openmc_nuclides/: mod.rs
src/lib/simulation/monte_carlo/openmc/particle_data/: mod.rs
src/lib/simulation/monte_carlo/openmc/position/: math_ops.rs  mod.rs  vector_ops.rs
src/lib/simulation/monte_carlo/openmc/random_dist/: mod.rs  random_dist_tests.rs
src/lib/simulation/monte_carlo/openmc/random_lcg/: mod.rs
src/lib/teh_o_error/: mod.rs
src/mock_test_cases_lib/: mod.rs
src/mock_test_cases_lib/spherical_u235/: mod.rs  monoenergetic.rs
src/mock_test_cases_lib/spherical_u235/monoenergetic/particles_and_surfaces/: absorption_random_walk.rs  mod.rs  scattering_random_walk.rs  test_1_absorption_random_walk.rs  test_2_scattering_random_walk.rs  test_3_multiple_particles.rs  test_4_multiple_particles_parallel.rs  test_5_multiple_batches.rs
(+7 files in other folders)
