[package]
name = "teh-o"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
hdf5 = "0.8.1"
kolmogorov_smirnov = "1.1.0"
netcdf = { version = "0.9.0", features = ["static"] }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde-xml-rs = "0.6.0"
statest = "0.2.2"
statrs = "0.16.0"
thiserror = "1.0.51"
uom = "0.35.0"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "teh_o"
path = "src/lib/lib.rs"
